Update on the work

--- a/Pytorch File/Fundamental.ipynb
+++ b/Pytorch File/Fundamental.ipynb
@@ -2198,8 +2198,331 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "id": "c60bfd6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.5032, 0.5354, 0.0667, 0.5115],\n",
+      "        [0.6045, 0.5935, 0.8548, 0.4508],\n",
+      "        [0.1287, 0.0072, 0.1379, 0.6465]])\n",
+      "tensor([[0.0531, 0.4890, 0.8922, 0.7757],\n",
+      "        [0.2229, 0.5353, 0.7381, 0.1968],\n",
+      "        [0.3203, 0.7822, 0.3878, 0.1543]])\n",
+      "tensor([[False, False, False, False],\n",
+      "        [False, False, False, False],\n",
+      "        [False, False, False, False]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "#create two random tensors\n",
+    "random_A=torch.rand(3,4)\n",
+    "random_B=torch.rand(3,4)\n",
+    "print(random_A)\n",
+    "print(random_B)\n",
+    "print(random_A==random_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "74351236",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1==1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "45275aec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.8823, 0.9150, 0.3829, 0.9593],\n",
+      "        [0.3904, 0.6009, 0.2566, 0.7936],\n",
+      "        [0.9408, 0.1332, 0.9346, 0.5936]])\n",
+      "tensor([[0.8694, 0.5677, 0.7411, 0.4294],\n",
+      "        [0.8854, 0.5739, 0.2666, 0.6274],\n",
+      "        [0.2696, 0.4414, 0.2969, 0.8317]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lets's make some random but reproducible tensors\n",
+    "from networkx import random_clustered_graph\n",
+    "import torch \n",
+    "# set the random seed\n",
+    "Random_seed=42\n",
+    "torch.manual_seed(Random_seed)\n",
+    "random_c=torch.rand(3,4)\n",
+    "print(random_c)\n",
+    "random_d=torch.rand(3,4)\n",
+    "torch.manual_seed(Random_seed)\n",
+    "print(random_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdfa8afb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Running tensors and Pytorch objects on the GPU\n",
+    "'GPU= faster computation Hardwarer '"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e076f2e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'refer to pytorch setup documentationhttps://pytorch.org/'"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### 1. getting A Gpu \n",
+    "' Easy Way = use Google Colab''Options to upgrade as well'\n",
+    "' User own GPU '\n",
+    "' Use cloud Computing -GCP,AWS Azure these allow you to rent computers on the cloud and access them '\n",
+    "' For 2,3 Pytorch +GPU drivers (cuda takes a little bit of settinng up to do this )'\n",
+    "'refer to pytorch setup documentation''https://pytorch.org/'\n",
+    "'!nvidia-smi'\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "48898f1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'nvidia-smi' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "3dc5a2ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##2. check for GPU acces with Pytorch\n",
+    "import torch \n",
+    "torch.cuda.is_available()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "9e8030d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cpu'"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# setup device agnostic Code \n",
+    "device=\"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "device\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "27af02a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Count number of devices\n",
+    "torch.cuda.device_count()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "079a25b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Setup device agnostic code'"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' The best practice to setup on GPU '\n",
+    "'Setup device agnostic code'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "849c296f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' The reason we want our tensors /model onn the GPU in because using a GPU result are faste'"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Putting Tensors (and Models ) on the GPU\n",
+    "' The reason we want our tensors /model onn the GPU in because using a GPU result are faste'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "11aa641a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 2, 3]) cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor=torch.tensor([1,2,3],device='cpu')\n",
+    "\n",
+    "print(tensor,tensor.device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "0eee833f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3])"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# MOve tensor To GPu (if avaiable )\n",
+    "tensor_on_gpu=tensor.to(device)\n",
+    "tensor_on_gpu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "93399f35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Moving tensors back to CPU \n",
+    "# To fix the GPU Tensor with Numpy issues we can first set it to the CPU\n",
+    "tensor_back_to_cpu=tensor_on_gpu.cpu().numpy()\n",
+    "tensor_back_to_cpu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27034957",
    "metadata": {},
    "outputs": [],
    "source": []
