--- a/Pytorch File/Chapter_1.ipynb
+++ b/Pytorch File/Chapter_1.ipynb
@@ -10,18 +10,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "13fb4f11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Pytorch Workflow'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    " "
+    "\"Pytorch Workflow\"\n",
+    " # Getting setup \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b969c58e",
+   "metadata": {},
+   "source": [
+    "What this  notebook consist\n",
+    "1. data (Prepare and load)\n",
+    "2. build Model\n",
+    "3. Fitting the model  to data (training) \n",
+    "4. Making prediction and evaluating a model\n",
+    "5. saving and loading a model \n",
+    "6. Putting it all together\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9ab16eb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.9.1+cpu'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch \n",
+    "from torch import nn ##nn contains all of pytorch's building blocks for neural networks \n",
+    "## Torch .NN : link  https://docs.pytorch.org/docs/stable/nn.html\n",
+    "import matplotlib.pyplot as plt \n",
+    "# check Pytorch versio\n",
+    "torch.__version__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f511b35",
+   "metadata": {},
+   "source": [
+    "1. Data Preparing and loading \n",
+    "Data can be almost anything \n",
+    "* Excel speadsheet\n",
+    "* Image\n",
+    "* Video\n",
+    "* Audio \n",
+    "* DNA\n",
+    "* Text\n",
+    "\n",
+    "2 Machine Learning is a game of two parts:\n",
+    "* Get Data into a numberical representation \n",
+    "* Build a model to learn patterns in that numerical representation \n",
+    "Same  gose for Deep Learning \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10b6d3e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
