--- a/Pytorch File/Chapter_1.ipynb
+++ b/Pytorch File/Chapter_1.ipynb
@@ -89,13 +89,86 @@
     "* Get Data into a numberical representation \n",
     "* Build a model to learn patterns in that numerical representation \n",
     "Same  gose for Deep Learning \n",
-    "\n"
+    "\n",
+    "To show case this let's create some known data using Linear Regression \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "10b6d3e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[0.0000],\n",
+       "         [0.0200],\n",
+       "         [0.0400],\n",
+       "         [0.0600],\n",
+       "         [0.0800],\n",
+       "         [0.1000],\n",
+       "         [0.1200],\n",
+       "         [0.1400],\n",
+       "         [0.1600],\n",
+       "         [0.1800]]),\n",
+       " tensor([[0.3000],\n",
+       "         [0.3140],\n",
+       "         [0.3280],\n",
+       "         [0.3420],\n",
+       "         [0.3560],\n",
+       "         [0.3700],\n",
+       "         [0.3840],\n",
+       "         [0.3980],\n",
+       "         [0.4120],\n",
+       "         [0.4260]]),\n",
+       " 50,\n",
+       " 50)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create ' Known ' parameters\n",
+    "weight=0.7\n",
+    "bias=0.3\n",
+    "# Create  data \n",
+    "start=0\n",
+    "end=1\n",
+    "step=0.02\n",
+    "X=torch.arange(start,end,step).unsqueeze(dim=1)\n",
+    "Y= weight* X+bias \n",
+    "X[:10],Y[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7cef47b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50, 50)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(X),len(Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec09e439",
    "metadata": {},
    "outputs": [],
    "source": []
