--- a/Pytorch File/Chapter_1.ipynb
+++ b/Pytorch File/Chapter_1.ipynb
@@ -166,9 +166,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ec56842",
+   "metadata": {},
+   "source": [
+    "Spliting data into training and test sets\n",
+    "\n",
+    "Training sets  -> The model learns from this data ->60-80% -> Always \n",
+    "Validation sets -> The model  gets tuned on this data -> 10-20% -> often but not always \n",
+    "Testing set-> The model gets evaluated on this data to test  what it has learned ->10-20%\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2eb088cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(40, 40, 40, 40)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_split=int(0.8*len(X))\n",
+    "X_train, y_train=X[:train_split],Y[:train_split]\n",
+    "X_test, y_test=X[:train_split],Y[:train_split]\n",
+    "len(X_train),len(y_train),len(X_test),len(y_test)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec09e439",
+   "id": "1881c23a",
    "metadata": {},
    "outputs": [],
    "source": []
