Update with numpy

--- a/Pytorch File/Chapter_1.ipynb
+++ b/Pytorch File/Chapter_1.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9ab16eb0",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
        "'2.9.1+cpu'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "10b6d3e8",
    "metadata": {},
    "outputs": [
@@ -121,18 +121,19 @@
        "         [0.3840],\n",
        "         [0.3980],\n",
        "         [0.4120],\n",
-       "         [0.4260]]),\n",
-       " 50,\n",
-       " 50)"
+       "         [0.4260]]))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create ' Known ' parameters\n",
+    "from param import random_seed\n",
+    "\n",
+    "\n",
     "weight=0.7\n",
     "bias=0.3\n",
     "# Create  data \n",
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "7cef47b2",
    "metadata": {},
    "outputs": [
@@ -156,7 +157,7 @@
        "(50, 50)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,32 +180,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "2eb088cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(40, 40, 40, 40)"
+       "(40, 10, 10, 40)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train_split=int(0.8*len(X))\n",
-    "X_train, y_train=X[:train_split],Y[:train_split]\n",
-    "X_test, y_test=X[:train_split],Y[:train_split]\n",
-    "len(X_train),len(y_train),len(X_test),len(y_test)\n"
+    "x_train,y_train=X[:train_split],Y[:train_split]\n",
+    "x_test,y_test=X[train_split:],Y[train_split:]\n",
+    "len(x_train),len(x_test),len(y_test),len(y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4423dbd7",
+   "metadata": {},
+   "source": [
+    "Visualize"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1881c23a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "def plot_predictions(train_data=x_train, \n",
+    "                     train_labels=y_train, \n",
+    "                     test_data=x_test, \n",
+    "                     test_labels=y_test, \n",
+    "                     predictions=None):\n",
+    "  \"\"\"\n",
+    "  Plots training data, test data and compares predictions.\n",
+    "  \"\"\"\n",
+    "  plt.figure(figsize=(10, 7))\n",
+    "\n",
+    "  # Plot training data in blue\n",
+    "  plt.scatter(train_data, train_labels, c=\"b\", s=4, label=\"Training data\")\n",
+    "  \n",
+    "  # Plot test data in green\n",
+    "  plt.scatter(test_data, test_labels, c=\"g\", s=4, label=\"Testing data\")\n",
+    "\n",
+    "  if predictions is not None:\n",
+    "    # Plot the predictions in red (predictions were made on the test data)\n",
+    "    plt.scatter(test_data, predictions, c=\"r\", s=4, label=\"Predictions\")\n",
+    "\n",
+    "  # Show the legend\n",
+    "  plt.legend(prop={\"size\": 14})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42512c13",
    "metadata": {},
    "outputs": [],
    "source": []
