--- a/Pytorch File/Chapter_1.ipynb
+++ b/Pytorch File/Chapter_1.ipynb
@@ -385,8 +385,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "b6901590",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of testing Sample:40\n",
+      "Number of Predictions made:10\n",
+      "Predicted values:\n",
+      "tensor([[1.3568],\n",
+      "        [1.3711],\n",
+      "        [1.3854],\n",
+      "        [1.3998],\n",
+      "        [1.4141],\n",
+      "        [1.4284],\n",
+      "        [1.4427],\n",
+      "        [1.4571],\n",
+      "        [1.4714],\n",
+      "        [1.4857]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of testing Sample:{len(x_train)}\")\n",
+    "print(f\"Number of Predictions made:{len(Y_preds)}\")\n",
+    "print(f\"Predicted values:\\n{Y_preds}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfaa9d3c",
    "metadata": {},
    "outputs": [],
    "source": []
