Prediction with out plotting using test value - prediction value

--- a/Pytorch File/Chapter_1.ipynb
+++ b/Pytorch File/Chapter_1.ipynb
@@ -437,6 +437,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e04d921b",
+   "metadata": {},
+   "source": [
+    "Predictions with Plot "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "96f5ccf9",
