working with Gpu coding

--- a/Pytorch File/Chapter_2.ipynb
+++ b/Pytorch File/Chapter_2.ipynb
@@ -747,11 +747,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "00fa30f2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Building a model \n",
+    "# Let's build  a model to classify our 1 and 0 or blue and red dots\n",
+    "\n",
+    "# TO do sos we want to :\n",
+    "# 1. setup device agonistic code our code will run on a accelerator (GPU) if there is one \n",
+    "# 2. construct a model (by subclassinf 'nn.Module')\n",
+    "# 3.  Define a loss funtion and optimizer\n",
+    "# 4.  training and test loop\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71dbe804",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch \n",
+    "import torch import nn\n",
+    "\n",
+    "# make  device agonstic code\n",
+    "\n",
+    "device=\"cuda\" if torch.cuda.is_available() else \"cpu\""
+   ]
   }
  ],
  "metadata": {
