Model training from starting

--- a/Pytorch File/Chapter_2.ipynb
+++ b/Pytorch File/Chapter_2.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "344fb58c",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e94c27fd",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e0fc6b87",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "09e0b8c1",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
      "data": {
       "text/html": [
        "\n",
-       "  <div id=\"df-8d6bbf81-84d4-4c19-9607-f9ecec7d4dc0\" class=\"colab-df-container\">\n",
+       "  <div id=\"df-ac193ab5-db37-4840-9616-18e4bb4bf98c\" class=\"colab-df-container\">\n",
        "    <div>\n",
        "<style scoped>\n",
        "    .dataframe tbody tr th:only-of-type {\n",
@@ -353,7 +353,7 @@
        "    <div class=\"colab-df-buttons\">\n",
        "      \n",
        "  <div class=\"colab-df-container\">\n",
-       "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8d6bbf81-84d4-4c19-9607-f9ecec7d4dc0')\"\n",
+       "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ac193ab5-db37-4840-9616-18e4bb4bf98c')\"\n",
        "            title=\"Convert this dataframe to an interactive table.\"\n",
        "            style=\"display:none;\">\n",
        "      \n",
@@ -405,12 +405,12 @@
        "\n",
        "    <script>\n",
        "      const buttonEl =\n",
-       "        document.querySelector('#df-8d6bbf81-84d4-4c19-9607-f9ecec7d4dc0 button.colab-df-convert');\n",
+       "        document.querySelector('#df-ac193ab5-db37-4840-9616-18e4bb4bf98c button.colab-df-convert');\n",
        "      buttonEl.style.display =\n",
        "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
        "\n",
        "      async function convertToInteractive(key) {\n",
-       "        const element = document.querySelector('#df-8d6bbf81-84d4-4c19-9607-f9ecec7d4dc0');\n",
+       "        const element = document.querySelector('#df-ac193ab5-db37-4840-9616-18e4bb4bf98c');\n",
        "        const dataTable =\n",
        "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
        "                                                    [key], {});\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "02729694",
    "metadata": {},
    "outputs": [],
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e2ca019c",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7b8c5810",
    "metadata": {},
    "outputs": [
@@ -577,7 +577,7 @@
        "type": "string"
       },
       "text/plain": [
-       "'2.9.0+cpu'"
+       "'2.9.0+cu126'"
       ]
      },
      "execution_count": 13,
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "fdf00342",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "382be27f",
    "metadata": {},
    "outputs": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "e126bd86",
    "metadata": {},
    "outputs": [],
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "id": "99b3fc73",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
        "800"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "id": "3fc30ba5",
    "metadata": {},
    "outputs": [
@@ -715,7 +715,7 @@
        "200"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "d46b7e8f",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
        "(800, 200)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "00fa30f2",
    "metadata": {},
    "outputs": [],
@@ -764,18 +764,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "71dbe804",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.google.colaboratory.intrinsic+json": {
+       "type": "string"
+      },
+      "text/plain": [
+       "'cuda'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch \n",
-    "import torch import nn\n",
+    "from torch import nn\n",
     "\n",
     "# make  device agonstic code\n",
     "\n",
-    "device=\"cuda\" if torch.cuda.is_available() else \"cpu\""
+    "device=\"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "device"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83f1e36e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
