--- a/Pytorch File/Chapter_2.ipynb
+++ b/Pytorch File/Chapter_2.ipynb
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "986292e7",
    "metadata": {},
    "outputs": [
@@ -809,7 +809,7 @@
        ")"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "5f82c57c",
    "metadata": {},
    "outputs": [
@@ -833,18 +833,18 @@
      "data": {
       "text/plain": [
        "OrderedDict([('0.weight',\n",
-       "              tensor([[ 0.4262, -0.3783],\n",
-       "                      [-0.1936,  0.1705],\n",
-       "                      [-0.0503,  0.4715],\n",
-       "                      [-0.2328, -0.0964],\n",
-       "                      [-0.5685, -0.5516]])),\n",
-       "             ('0.bias', tensor([ 0.5131,  0.5733,  0.6154, -0.5707, -0.0725])),\n",
+       "              tensor([[ 0.5764,  0.4597],\n",
+       "                      [ 0.0188,  0.1979],\n",
+       "                      [-0.1376,  0.6759],\n",
+       "                      [-0.5519, -0.2918],\n",
+       "                      [ 0.1146,  0.6459]])),\n",
+       "             ('0.bias', tensor([ 0.4174, -0.1852,  0.6243, -0.1526,  0.2076])),\n",
        "             ('1.weight',\n",
-       "              tensor([[ 0.1731, -0.1346,  0.1148,  0.0334,  0.4423]])),\n",
-       "             ('1.bias', tensor([-0.4259]))])"
+       "              tensor([[-0.2189, -0.3179,  0.3254, -0.2672, -0.3741]])),\n",
+       "             ('1.bias', tensor([-0.0247]))])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "452d667f",
    "metadata": {},
    "outputs": [],
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "f0519f05",
    "metadata": {},
    "outputs": [
@@ -878,16 +878,16 @@
       "Length of test samples: 200, Shape: torch.Size([200])\n",
       "\n",
       "First 10 predictions:\n",
-      "tensor([[-0.5249],\n",
-      "        [-0.6675],\n",
-      "        [-0.1900],\n",
-      "        [-0.6196],\n",
-      "        [-0.2518],\n",
-      "        [-0.3384],\n",
-      "        [-0.6909],\n",
-      "        [-0.6140],\n",
-      "        [-0.1879],\n",
-      "        [-0.6777]], grad_fn=<SliceBackward0>)\n",
+      "tensor([[ 0.0630],\n",
+      "        [ 0.0050],\n",
+      "        [ 0.1936],\n",
+      "        [ 0.0260],\n",
+      "        [ 0.1597],\n",
+      "        [ 0.1245],\n",
+      "        [-0.0119],\n",
+      "        [ 0.0160],\n",
+      "        [ 0.1948],\n",
+      "        [ 0.0007]], grad_fn=<SliceBackward0>)\n",
       "\n",
       "First 10 test labels:\n",
       "tensor([1., 0., 1., 0., 1., 1., 0., 0., 1., 0.])\n"
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "bdfe44ab",
    "metadata": {},
    "outputs": [],
@@ -911,8 +911,46 @@
     "#### 2.1 setup the loss function\n",
     "\n",
     "### which loss funtion or optimizer should you use?\n",
+    " \n",
+    "loss_fn=nn.BCEWithLogitsLoss()\n",
+    "optimizer=torch.optim.SGD(params=model_0.parameters(),lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c64e377a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate  accuracy - out of 100 example, what percentage does our model get right?\n",
     "\n",
-    "loss_fn="
+    "def accuracy_fn(y_true,y_pred):\n",
+    "    correct=torch.eq(y_true,y_pred).sum().item()\n",
+    "    acc=(correct/len(y_pred))*100\n",
+    "    return acc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a81bb3b",
+   "metadata": {},
+   "source": [
+    "### Train model \n",
+    " * Forward Pass\n",
+    " * Calculate the loss\n",
+    " * optimizer zero grad\n",
+    " * Loss Backward \n",
+    " * Optimizer Step \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f7fd9de",
+   "metadata": {},
+   "source": [
+    "## our model output are going to be raw **logits**\n",
+    "# we can convert these **logits** into prediction probabilites by passing them to some kind of activation function \n"
    ]
   }
  ],
