--- a/Pytorch File/Chapter_2.ipynb
+++ b/Pytorch File/Chapter_2.ipynb
@@ -950,7 +950,46 @@
    "metadata": {},
    "source": [
     "## our model output are going to be raw **logits**\n",
-    "# we can convert these **logits** into prediction probabilites by passing them to some kind of activation function \n"
+    "# we can convert these **logits** into prediction probabilites by passing them to some kind of activation function \n",
+    "\n",
+    "\n",
+    "Then we can convert our models prediction probabilites to ** prediction labels** by either rounding them or taking them\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "7cbe41bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0630],\n",
+       "        [0.0050],\n",
+       "        [0.1936],\n",
+       "        [0.0260],\n",
+       "        [0.1597]], grad_fn=<SliceBackward0>)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_logits=model_0(X_test.to(device))[:5]\n",
+    "y_logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a920f295",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n   "
    ]
   }
  ],
