--- a/Python_code_practice/matplotlib.ipynb
+++ b/Python_code_practice/matplotlib.ipynb
@@ -1936,6 +1936,26 @@
    "execution_count": null,
    "id": "7e6574b6",
    "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'update' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[134], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m update\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'update' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfbe7060",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
